tests/failing/func-call-bad-arg-type.c

int func1(char a) {
    return 3;
}

int main() {
    func1(-123); // should pass a char
}
